...
      return Center(child: CircularProgressIndicator());
    }
    return Scaffold(
      resizeToAvoidBottomInset: true,
      key: _scaffoldKey,
      appBar: AppBar(
        title: Text('Home Page'),
        leading: IconButton(
          icon: Stack(
            children: [
              Icon(Icons.notifications),
              if (_notifications.any((n) => !n.isRead))
                Positioned(
...
